# Centralised-Lab-Control-Framework

./: .env.example  .gitignore  .launcher_state.json  0205log  AUDIT_FINDINGS.md  AUDIT_FIXES.md  BUGFIX_REPORT.md  CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  CONDA_SETUP.md  CONFIGURATION.md  CONNECTION_TEST_QUICKREF.md  DATA_PATHS_FIX.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PROJECT_EVALUATION.md  PROJECT_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  SERVER_FIXES.md  check_server.py  cleanup_plan.md  debugg  launcher.py  pyproject.toml  requirements-dev.txt  requirements-server.txt  requirements.txt  setup_conda.bat  setup_conda.py  setup_manager_pc.bat  setup_manager_pc.py  setup_server_optimized.bat  start.bat  start.sh  switch_env.py  test_connections.bat  test_connections.sh  validate_setup.py  wavemeter  (+2 more)
artiq/: ZmqWorker.py  artiq_log
config/: README.md  base.yaml  config.yaml  hardware.yaml  parallel_config.yaml  services.yaml  settings.yaml
core/: __init__.py  config.py  enums.py  experiment.py
data/: loading_profiles.json
deploy_artiq/: README_DEPLOYMENT.md
deploy_lab_pc/: README_DEPLOYMENT.md  lab_comms.py  requirements.txt
deploy_server/: README_DEPLOYMENT.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  BO.md  COMMUNICATION_PROTOCOL.md  DATA_INTEGRATION.md  DEVELOPMENT.md  FLASK_INTERFACE_REQUIREMENTS.md  HARDWARE.md  LABVIEW_INTEGRATION.md  MIGRATION_GUIDE.md  OPTIMIZATION_GUIDE.md  PARALLEL_ARCHITECTURE.md  README.md  SERVER_OPTIMIZATION.md  USER_GUIDE.md  index.md  todos.md
ideas/: HD loading sequence.docx  artiq todos.docx  cam_mhi_doc.docx  control_workflow.docx  sig_y_fitting.docx
labview/: mock_labview_sender.py
logs/: camera_server_log  server_debug
scripts/: README.md  debug_labview_tcp.py  debug_mls.py  debug_wavemeter.py  install-windows-service.bat  lab-control.service  quick_check.py  setup_env.py  switch_env.py
server_log/: error1032  settings.yaml
setup/: environment.yml
src/: __init__.py  __main__.py  (+1 more)
(+1398 files in other folders)
